fix z-index-nav

--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -6,7 +6,7 @@
   left: -100%;
   background-color: $blue-light;
   padding: 2rem 0;
-  z-index: 20;
+  z-index: 201;
   display: flex;
   justify-content: center;
   align-items: flex-start;
